# VEGA

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
config/: default.toml
docs/: api.md  architecture.md
models/: identity_verifier.pt
scripts/: build.sh  deploy.sh  setup.sh  test.sh
src/lib/vegacode/: Cargo.toml
src/lib/vegacode/src/: ai.rs  lib.rs  tools.rs
src/lib/vegaflux/: Cargo.toml
src/lib/vegaflux/src/: governance.rs  lib.rs  token.rs
src/lib/vegaframe/: Cargo.toml
src/lib/vegaframe/src/: lib.rs
src/lib/vegagate/: Cargo.toml
src/lib/vegagate/src/: auth.rs  biometrics.rs  lib.rs
src/lib/vegagrid/: Cargo.toml
src/lib/vegagrid/src/: lib.rs
src/lib/veganet/: Cargo.toml
src/lib/veganet/src/: encryption.rs  lib.rs  routing.rs  swarm.rs
src/lib/vegastar/: Cargo.toml
src/lib/vegastar/src/: ai.rs  did.rs  lib.rs  vc.rs
src/lib/vegastore/: Cargo.toml
src/lib/vegastore/src/: access.rs  encryption.rs  lib.rs  storage.rs
src/lib/vegawave/: Cargo.toml
src/lib/vegawave/src/: lib.rs
tests/: integration.rs
